--- a/client/src/Components/footer/footer.css
+++ b/client/src/Components/footer/footer.css
@@ -1,6 +1,10 @@
-.footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
+/* src/Components/footer/Footer.css */
+.footer {
+  background-color: #333;
+  color: #f5f5f7;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
