--- a/client/src/Components/landing/LandingPage.css
+++ b/client/src/Components/landing/LandingPage.css
@@ -1,10 +1,3 @@
-/* Basic reset */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 /* Основний контейнер сторінки для вирівнювання */
 .landing-parent-container {
   display: flex;
@@ -16,7 +9,7 @@
 
 /* Контейнер для контенту */
 .landing-container {
-  max-width: 600px; /* Можна налаштувати ширину, щоб не виглядало занадто велико */
+  max-width: 600px;
   padding: 20px;
 }
 
@@ -26,7 +19,7 @@
   font-size: 36px;
   color: #333;
   line-height: 1.2;
-  letter-spacing: 2px; /* Розширене міжбуквене відстань для ретро ефекту */
+  letter-spacing: 2px;
   text-transform: uppercase;
 }
 
