--- a/client/src/Components/footer/footer.css
+++ b/client/src/Components/footer/footer.css
@@ -1,10 +1,14 @@
 /* src/Components/footer/Footer.css */
 .footer {
-  background-color: #333;
-  color: #f5f5f7;
+  background-color: #f8f9fa;
+  color: black;
   padding: 20px;
   text-align: center;
   position: fixed;
   bottom: 0;
   width: 100%;
+  border-radius:20%;
+  border: black;
+  background-color: #f8f9fa;
+  border-top: 1px solid #e0e0e0;
 }
